--- a/social-mosaic-core/src/main/resources/application.properties
+++ b/social-mosaic-core/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=core-service
 
 spring.kafka.bootstrap-servers=kafka-update:9092,kafka-analyse:9093
 
-spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
+spring.datasource.url=jdbc:postgresql://postgres-core-service:5432/postgres
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
