postgresql done but not tested

--- a/graph-service/src/main/resources/application.properties
+++ b/graph-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=graph-service
+
+spring.datasource.url=jdbc:postgresql://postgres-graph-service:5434/postgres
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
