--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,15 @@ services:
     ports:
       - '5433:5432'
 
+  postgres-graph-service:
+    image: postgres:latest
+    environment:
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=postgres
+    ports:
+      - '5434:5432'
+
   zookeeper:
     image: zookeeper:3.5.8
     ports:
