added mongodb and repos not tested

--- a/analyse-service/src/main/resources/application.properties
+++ b/analyse-service/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.url=jdbc:postgresql://postgres-core-service:5433/postgres
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.data.mongodb.host=mongodb-analyse-service
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mydatabase
