--- a/graph-service/src/main/resources/application.properties
+++ b/graph-service/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url=jdbc:postgresql://postgres-graph-service:5434/postgres
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.neo4j.uri=bolt://neo4j-graph-service:7687
+spring.neo4j.authentication.username=neo4j
+spring.neo4j.authentication.password=password
