--- a/graph-service/src/main/resources/application.properties
+++ b/graph-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=graph-service
 
-spring.datasource.url=jdbc:postgresql://postgres-graph-service:5434/postgres
+spring.datasource.url=jdbc:postgresql://postgres-graph-service:5432/postgres
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -8,3 +8,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.neo4j.uri=bolt://neo4j-graph-service:7687
 spring.neo4j.authentication.username=neo4j
 spring.neo4j.authentication.password=password
+
+vk.api.base-url=https://api.vk.com/
